<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShoppingList</string>
    <string name="tab_shopping_list">List</string>
    <string name="tab_shopping_wares">Wares</string>
    <string name="priceTxtName">Samlet pris:</string>
    <string name="menu_save">Save</string>
    <string name="priceTxtPrice">0</string>
    <string name="menuLabelName">Name</string>
    <string name="menuLabelUnit">Unit</string>
    <string name="menuLabelAmount">Amount</string>
    <string name="menu_forword">Forword</string>
    <string name="memu_backword">Backword</string>
    <string name="menuLabelPrice">Price</string>
    <string name="menu_new">New</string>
    <string name="wares_menu_edit">Edit</string>
    <string name="wares_menu_select">Select</string>
    <string name="wares_menu_delete">Delete</string>
    <string name="wares_menu_new">New</string>
</resources>
