<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/menu_settings"
          android:title="@string/app_name"
          android:orderInCategory="100"
          android:showAsAction="never" />

    <item android:id="@+id/menuNew"
          android:title="@string/menu_new"
          android:showAsAction="always|withText"/>

    <item android:id="@+id/menuBackword"
          android:title="@string/memu_backword"
          android:showAsAction="always|withText"/>

    <item android:id="@+id/menuforword"
          android:title="@string/menu_forword"
          android:showAsAction="always|withText"/>

    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:showAsAction="always|withText" />

</menu>