<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">


    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/menuLabelName"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_margin="5dp"
                android:text="@string/menuLabelName"/>

        <EditText
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/menuLabelUnit"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_margin="5dp"
                android:text="@string/menuLabelUnit"/>


        <EditText
                 android:id="@+id/unit"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/menuLabelAmount"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_margin="5dp"
                android:text="@string/menuLabelAmount"/>


        <EditText
                android:id="@+id/amount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">


        <TextView
                android:id="@+id/menuLabelPrice"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_margin="5dp"
                android:text="@string/menuLabelPrice"/>

        <EditText
                android:id="@+id/price"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"/>

    </LinearLayout>




</LinearLayout>

